PL2Proc/antlr/gramaticas/.antlr/GramaticaCompilerParser.java
// Generated from d:\ProgrammingStuff\Github\Procesadores\PL2Proc\antlr\gramaticas\GramaticaCompilerParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaCompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INCLUDE=1, FUNCTION=2, TIPONUMERO=3, TIPOCADENA=4, TIPOVOID=5, BEGIN=6, 
		END=7, DEVOLVER=8, WHILE=9, FOR=10, IF=11, ELSE=12, IFELSE=13, CONDICIONES=14, 
		PI=15, PD=16, PC=17, ADD=18, MINUS=19, PRODUCT=20, DIVISION=21, ASIGNACION=22, 
		PORCENTAJE=23, MENORQUE=24, MAYORQUE=25, IGUALQUE=26, DISTINTOQUE=27, 
		DOSPUNTOS=28, PUNTO=29, COMA=30, NEWLINE=31, CADENA=32, ID=33, DIGITO=34, 
		WS=35, COMENTARIO_LINEA=36, COMENTARIO_LINEA2=37, COMENTARIO_BLOQUE1=38, 
		COMENTARIO_BLOQUE2=39;
	public static final int
		RULE_prog = 0, RULE_include = 1, RULE_asignacion = 2, RULE_variable = 3, 
		RULE_tipo = 4, RULE_funcionwhile = 5, RULE_funcionfor = 6, RULE_numeros = 7, 
		RULE_entero = 8, RULE_flotante = 9, RULE_devolver = 10, RULE_codigo = 11, 
		RULE_func = 12, RULE_nombrevariable = 13, RULE_nombrefuncion = 14, RULE_cabecerafuncion = 15, 
		RULE_crearfuncion = 16, RULE_llamarfuncion = 17, RULE_parametro = 18, 
		RULE_expr = 19, RULE_exprlog = 20, RULE_comentarios = 21;
	public static final String[] ruleNames = {
		"prog", "include", "asignacion", "variable", "tipo", "funcionwhile", "funcionfor", 
		"numeros", "entero", "flotante", "devolver", "codigo", "func", "nombrevariable", 
		"nombrefuncion", "cabecerafuncion", "crearfuncion", "llamarfuncion", "parametro", 
		"expr", "exprlog", "comentarios"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'include'", "'function'", "'numero'", "'cadena'", "'void'", "'begin'", 
		"'end'", "'devolver'", "'while'", "'for'", "'if'", "'else'", null, null, 
		"'('", "')'", "';'", "'+'", "'-'", "'*'", "'/'", "':='", "'%'", "'<'", 
		"'>'", "'=='", "'!='", "':'", "'.'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INCLUDE", "FUNCTION", "TIPONUMERO", "TIPOCADENA", "TIPOVOID", "BEGIN", 
		"END", "DEVOLVER", "WHILE", "FOR", "IF", "ELSE", "IFELSE", "CONDICIONES", 
		"PI", "PD", "PC", "ADD", "MINUS", "PRODUCT", "DIVISION", "ASIGNACION", 
		"PORCENTAJE", "MENORQUE", "MAYORQUE", "IGUALQUE", "DISTINTOQUE", "DOSPUNTOS", 
		"PUNTO", "COMA", "NEWLINE", "CADENA", "ID", "DIGITO", "WS", "COMENTARIO_LINEA", 
		"COMENTARIO_LINEA2", "COMENTARIO_BLOQUE1", "COMENTARIO_BLOQUE2"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticaCompilerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaCompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<CrearfuncionContext> crearfuncion() {
			return getRuleContexts(CrearfuncionContext.class);
		}
		public CrearfuncionContext crearfuncion(int i) {
			return getRuleContext(CrearfuncionContext.class,i);
		}
		public List<ComentariosContext> comentarios() {
			return getRuleContexts(ComentariosContext.class);
		}
		public ComentariosContext comentarios(int i) {
			return getRuleContext(ComentariosContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(44);
						match(NEWLINE);
						}
						} 
					}
					setState(49);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(55);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(50);
					include();
					}
					break;
				case 2:
					{
					setState(51);
					expr(0);
					}
					break;
				case 3:
					{
					setState(52);
					asignacion();
					}
					break;
				case 4:
					{
					setState(53);
					crearfuncion();
					}
					break;
				case 5:
					{
					setState(54);
					comentarios();
					}
					break;
				}
				setState(57);
				match(NEWLINE);
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INCLUDE) | (1L << FUNCTION) | (1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID) | (1L << WHILE) | (1L << FOR) | (1L << PI) | (1L << PUNTO) | (1L << NEWLINE) | (1L << CADENA) | (1L << ID) | (1L << DIGITO) | (1L << COMENTARIO_LINEA) | (1L << COMENTARIO_LINEA2) | (1L << COMENTARIO_BLOQUE1) | (1L << COMENTARIO_BLOQUE2))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public List<TerminalNode> INCLUDE() { return getTokens(GramaticaCompilerParser.INCLUDE); }
		public TerminalNode INCLUDE(int i) {
			return getToken(GramaticaCompilerParser.INCLUDE, i);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticaCompilerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaCompilerParser.ID, i);
		}
		public List<TerminalNode> PC() { return getTokens(GramaticaCompilerParser.PC); }
		public TerminalNode PC(int i) {
			return getToken(GramaticaCompilerParser.PC, i);
		}
		public List<TerminalNode> PUNTO() { return getTokens(GramaticaCompilerParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(GramaticaCompilerParser.PUNTO, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_include);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(63);
				match(INCLUDE);
				setState(64);
				match(ID);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PUNTO) {
					{
					{
					setState(65);
					match(PUNTO);
					setState(66);
					match(ID);
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(PC);
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(73);
						match(NEWLINE);
						}
						} 
					}
					setState(78);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public NombrevariableContext nombrevariable() {
			return getRuleContext(NombrevariableContext.class,0);
		}
		public TerminalNode ASIGNACION() { return getToken(GramaticaCompilerParser.ASIGNACION, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PC() { return getToken(GramaticaCompilerParser.PC, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asignacion);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID))) != 0)) {
				{
				setState(84);
				tipo();
				}
			}

			setState(87);
			nombrevariable();
			setState(88);
			match(ASIGNACION);
			setState(89);
			expr(0);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PC) {
				{
				setState(90);
				match(PC);
				}
			}

			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					match(NEWLINE);
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaCompilerParser.ID, 0); }
		public TerminalNode ASIGNACION() { return getToken(GramaticaCompilerParser.ASIGNACION, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID))) != 0)) {
				{
				setState(99);
				tipo();
				}
			}

			setState(102);
			match(ID);
			setState(103);
			match(ASIGNACION);
			setState(104);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode TIPONUMERO() { return getToken(GramaticaCompilerParser.TIPONUMERO, 0); }
		public TerminalNode TIPOCADENA() { return getToken(GramaticaCompilerParser.TIPOCADENA, 0); }
		public TerminalNode TIPOVOID() { return getToken(GramaticaCompilerParser.TIPOVOID, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionwhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(GramaticaCompilerParser.WHILE, 0); }
		public TerminalNode PI() { return getToken(GramaticaCompilerParser.PI, 0); }
		public ExprlogContext exprlog() {
			return getRuleContext(ExprlogContext.class,0);
		}
		public TerminalNode PD() { return getToken(GramaticaCompilerParser.PD, 0); }
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public FuncionwhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionwhile; }
	}

	public final FuncionwhileContext funcionwhile() throws RecognitionException {
		FuncionwhileContext _localctx = new FuncionwhileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcionwhile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(WHILE);
			setState(109);
			match(PI);
			setState(110);
			exprlog();
			setState(111);
			match(PD);
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				match(NEWLINE);
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(117);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionforContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(GramaticaCompilerParser.FOR, 0); }
		public TerminalNode PI() { return getToken(GramaticaCompilerParser.PI, 0); }
		public TerminalNode PD() { return getToken(GramaticaCompilerParser.PD, 0); }
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticaCompilerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaCompilerParser.ID, i);
		}
		public List<TerminalNode> ASIGNACION() { return getTokens(GramaticaCompilerParser.ASIGNACION); }
		public TerminalNode ASIGNACION(int i) {
			return getToken(GramaticaCompilerParser.ASIGNACION, i);
		}
		public ExprlogContext exprlog() {
			return getRuleContext(ExprlogContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public List<TerminalNode> ADD() { return getTokens(GramaticaCompilerParser.ADD); }
		public TerminalNode ADD(int i) {
			return getToken(GramaticaCompilerParser.ADD, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(GramaticaCompilerParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(GramaticaCompilerParser.MINUS, i);
		}
		public FuncionforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionfor; }
	}

	public final FuncionforContext funcionfor() throws RecognitionException {
		FuncionforContext _localctx = new FuncionforContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcionfor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(FOR);
			setState(120);
			match(PI);
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(121);
				variable();
				}
				break;
			case 2:
				{
				setState(122);
				match(ID);
				}
				break;
			}
			{
			setState(125);
			match(ASIGNACION);
			setState(126);
			exprlog();
			}
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNACION:
				{
				setState(128);
				match(ASIGNACION);
				setState(129);
				variable();
				}
				break;
			case ID:
				{
				setState(130);
				match(ID);
				setState(135);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ADD:
					{
					{
					setState(131);
					match(ADD);
					setState(132);
					match(ADD);
					}
					}
					break;
				case MINUS:
					{
					{
					setState(133);
					match(MINUS);
					setState(134);
					match(MINUS);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(139);
			match(PD);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140);
				match(NEWLINE);
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(145);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumerosContext extends ParserRuleContext {
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public FlotanteContext flotante() {
			return getRuleContext(FlotanteContext.class,0);
		}
		public NumerosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeros; }
	}

	public final NumerosContext numeros() throws RecognitionException {
		NumerosContext _localctx = new NumerosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numeros);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				entero();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				flotante();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnteroContext extends ParserRuleContext {
		public List<TerminalNode> DIGITO() { return getTokens(GramaticaCompilerParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(GramaticaCompilerParser.DIGITO, i);
		}
		public EnteroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entero; }
	}

	public final EnteroContext entero() throws RecognitionException {
		EnteroContext _localctx = new EnteroContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_entero);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(152); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(151);
					match(DIGITO);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(154); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlotanteContext extends ParserRuleContext {
		public TerminalNode PUNTO() { return getToken(GramaticaCompilerParser.PUNTO, 0); }
		public List<TerminalNode> DIGITO() { return getTokens(GramaticaCompilerParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(GramaticaCompilerParser.DIGITO, i);
		}
		public FlotanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flotante; }
	}

	public final FlotanteContext flotante() throws RecognitionException {
		FlotanteContext _localctx = new FlotanteContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_flotante);
		int _la;
		try {
			int _alt;
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGITO:
				enterOuterAlt(_localctx, 1);
				{
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(156);
					match(DIGITO);
					}
					}
					setState(159); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DIGITO );
				setState(161);
				match(PUNTO);
				setState(163); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(162);
						match(DIGITO);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(165); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case PUNTO:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				match(PUNTO);
				setState(169); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(168);
						match(DIGITO);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(171); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DevolverContext extends ParserRuleContext {
		public TerminalNode DEVOLVER() { return getToken(GramaticaCompilerParser.DEVOLVER, 0); }
		public TerminalNode PI() { return getToken(GramaticaCompilerParser.PI, 0); }
		public TerminalNode PD() { return getToken(GramaticaCompilerParser.PD, 0); }
		public TerminalNode PC() { return getToken(GramaticaCompilerParser.PC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LlamarfuncionContext llamarfuncion() {
			return getRuleContext(LlamarfuncionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GramaticaCompilerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GramaticaCompilerParser.NEWLINE, i);
		}
		public DevolverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_devolver; }
	}

	public final DevolverContext devolver() throws RecognitionException {
		DevolverContext _localctx = new DevolverContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_devolver);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(DEVOLVER);
			setState(176);
			match(PI);
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(177);
				expr(0);
				}
				break;
			case 2:
				{
				setState(178);
				llamarfuncion();
				}
				break;
			}
			setState(181);
			match(PD);
			setState(182);
			match(PC);
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(183);
				match(NEWLINE);
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public LlamarfuncionContext llamarfuncion() {
			return getRuleContext(LlamarfuncionContext.class,0);
		}
		public FuncionwhileContext funcionwhile() {
			return getRuleContext(FuncionwhileContext.class,0);
		}
		public FuncionforContext funcionfor() {
			return getRuleContext(FuncionforContext.class,0);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_codigo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				{
				setState(189);
				asignacion();
				}
				break;
			case 2:
				{
				setState(190);
				llamarfuncion();
				}
				break;
			case 3:
				{
				setState(191);
				funcionwhile();
				}
				break;
			case 4:
				{
				setState(192);
				funcionfor();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
